# BubbleShooter

./: .gitignore  BubbleShooter  BubbleTests  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FindSDL2.cmake
src/: Game.cpp  Game.hpp  main.cpp
src/classes/: Bubble.cpp  Bubble.hpp  BubbleGrid.cpp  BubbleGrid.hpp  Roof.cpp  Roof.hpp  Score.cpp  Score.hpp  Shooter.cpp  Shooter.hpp
src/core/: InputHandler.cpp  InputHandler.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Settings.cpp  Settings.hpp  SoundPlayer.cpp  SoundPlayer.hpp  UI.hpp
src/levels/: CascadeLevel.cpp  CascadeLevel.hpp  ColorblindLevel.cpp  ColorblindLevel.hpp  LearningLevel.cpp  LearningLevel.hpp  Level.hpp  LevelLoader.cpp  LevelLoader.hpp  RapidfireLevel.cpp  RapidfireLevel.hpp
src/screens/: EndingScreen.cpp  EndingScreen.hpp  EntryLevelScreen.cpp  EntryLevelScreen.hpp  GameOverScreen.cpp  GameOverScreen.hpp  GameScreen.cpp  GameScreen.hpp  HomeScreen.cpp  HomeScreen.hpp  OptionsScreen.cpp  OptionsScreen.hpp  Screen.hpp
src/utils/: MathUtils.hpp
tests/: CMakeLists.txt  test_bubble.cpp
